// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionAndCancelButtonsComponent render with primary button href == null 1`] = `
<DocumentFragment>
  <div
    class="actionAndCancelButtonsComponent"
  >
    <div
      class="actionCancelButtonCol"
    >
      <mock-customizeddefaultbutton
        text="Cancel"
      />
    </div>
    <div
      class="actionCancelButtonCol"
    >
      <mock-customizeddefaultbutton
        disabled="false"
        primary="true"
        target="_self"
        text="Test"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ActionAndCancelButtonsComponent render with primary button href == sample href 1`] = `
<DocumentFragment>
  <div
    class="actionAndCancelButtonsComponent"
  >
    <div
      class="actionCancelButtonCol"
    >
      <mock-customizeddefaultbutton
        text="Cancel"
      />
    </div>
    <div
      class="actionCancelButtonCol"
    >
      <mock-customizeddefaultbutton
        disabled="false"
        href="sample href"
        primary="true"
        target="_blank"
        text="Test"
      />
    </div>
  </div>
</DocumentFragment>
`;